Fix errors